InMemoryProductRepository replaced with database integration, added tests, API-spec, etc.
